// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Parsing can handle something more complicated 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 19,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.verbatim",
    "position": Object {
      "end": Object {
        "column": 22,
        "line": 1,
      },
      "start": Object {
        "column": 19,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 27,
        "line": 1,
      },
      "start": Object {
        "column": 22,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.verbatim",
    "position": Object {
      "end": Object {
        "column": 30,
        "line": 1,
      },
      "start": Object {
        "column": 27,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 37,
        "line": 1,
      },
      "start": Object {
        "column": 30,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.verbatim",
    "position": Object {
      "end": Object {
        "column": 51,
        "line": 1,
      },
      "start": Object {
        "column": 37,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 56,
        "line": 1,
      },
      "start": Object {
        "column": 51,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.code",
    "position": Object {
      "end": Object {
        "column": 62,
        "line": 1,
      },
      "start": Object {
        "column": 56,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 70,
        "line": 1,
      },
      "start": Object {
        "column": 62,
        "line": 1,
      },
    },
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 4,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 4,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 9,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 2`] = `
Array [
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon emphasises at different locations 3`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 8,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 8,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon emphasises with 2 chars 1`] = `
Array [
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 4,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon emphasises with 2 chars 2`] = `
Array [
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon footnote reference 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 5,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "label": "1",
    },
    "name": "text.footnote",
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 5,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 18,
        "line": 0,
      },
      "start": Object {
        "column": 11,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 3`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 4`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 5`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 6`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 7`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon invalid inline markups 8`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 7,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon link 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "description": undefined,
      "uri": Object {
        "location": "./image/logo.png",
        "protocol": "file",
        "raw": "./image/logo.png",
      },
    },
    "name": "text.link",
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon link 2`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "description": "link",
      "uri": Object {
        "location": "Internal Link",
        "protocol": "internal",
        "raw": "Internal Link",
      },
    },
    "name": "text.link",
    "position": Object {
      "end": Object {
        "column": 29,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon link 3`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "description": "logo",
      "uri": Object {
        "location": "../image/logo.png",
        "protocol": "file",
        "raw": "../image/logo.png",
      },
    },
    "name": "text.link",
    "position": Object {
      "end": Object {
        "column": 33,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
  },
]
`;

exports[`Inline Parsing recon mixed emphasis 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 0,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": Object {
      "description": "Here's",
      "uri": Object {
        "location": "//github.com/xiaoxinghu/orgajs",
        "protocol": "https",
        "raw": "https://github.com/xiaoxinghu/orgajs",
      },
    },
    "name": "text.link",
    "position": Object {
      "end": Object {
        "column": 48,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 56,
        "line": 1,
      },
      "start": Object {
        "column": 48,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 63,
        "line": 1,
      },
      "start": Object {
        "column": 56,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 74,
        "line": 1,
      },
      "start": Object {
        "column": 63,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.italic",
    "position": Object {
      "end": Object {
        "column": 83,
        "line": 1,
      },
      "start": Object {
        "column": 74,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 89,
        "line": 1,
      },
      "start": Object {
        "column": 83,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.underline",
    "position": Object {
      "end": Object {
        "column": 97,
        "line": 1,
      },
      "start": Object {
        "column": 89,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 103,
        "line": 1,
      },
      "start": Object {
        "column": 97,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.code",
    "position": Object {
      "end": Object {
        "column": 118,
        "line": 1,
      },
      "start": Object {
        "column": 103,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 142,
        "line": 1,
      },
      "start": Object {
        "column": 118,
        "line": 1,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.strikeThrough",
    "position": Object {
      "end": Object {
        "column": 149,
        "line": 1,
      },
      "start": Object {
        "column": 142,
        "line": 1,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 166,
        "line": 1,
      },
      "start": Object {
        "column": 149,
        "line": 1,
      },
    },
  },
]
`;

exports[`Inline Parsing recon single emphasis 1`] = `
Array [
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 6,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 6,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 26,
        "line": 0,
      },
      "start": Object {
        "column": 13,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 36,
        "line": 0,
      },
      "start": Object {
        "column": 26,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 50,
        "line": 0,
      },
      "start": Object {
        "column": 36,
        "line": 0,
      },
    },
  },
  Object {
    "data": undefined,
    "name": "text.bold",
    "position": Object {
      "end": Object {
        "column": 55,
        "line": 0,
      },
      "start": Object {
        "column": 50,
        "line": 0,
      },
    },
  },
  Object {
    "name": "text.plain",
    "position": Object {
      "end": Object {
        "column": 56,
        "line": 0,
      },
      "start": Object {
        "column": 55,
        "line": 0,
      },
    },
  },
]
`;
